--- a/tasks/exchange-rates/src/Components/Controllers/index.css
+++ b/tasks/exchange-rates/src/Components/Controllers/index.css
@@ -1,14 +1,17 @@
 .exchange-rates__controllers{
     display: flex;
     flex-direction: row;
-    /*justify-content: center;*/
-    /*align-items: center;*/
+    justify-content: center;
 }
 .controllers__values{
+    display: flex;
+    flex-direction: column;
     text-align: right;
     margin-right: 15px;
 }
 
 .controllers__currencies{
+    display: flex;
+    flex-direction: column;
     text-align: left;
 }
