--- a/tasks/exchange-rates/src/index.css
+++ b/tasks/exchange-rates/src/index.css
@@ -6,3 +6,7 @@ body {
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
 }
+
+#root{
+    text-align: center;
+}
